--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,16 +34,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install black isort flake8 pytest
+          pip install black isort flake8 autoflake pytest
 
       - name: Auto-format with Black & isort
         run: |
           black . --line-length 120
           isort .
 
+      - name: Remove Unused Imports Automatically
+        run: |
+          autoflake --in-place --remove-unused-variables --remove-all-unused-imports -r .
+
       - name: Run Flake8 Linting
         run: |
-          flake8 . --count --max-complexity=10 --max-line-length=120 --statistics
+          flake8 . --count --max-complexity=10 --max-line-length=120 --statistics --ignore=F401
 
       - name: Run Pytest
         run: |
