Update ci.yml 5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,5 @@ jobs:
 
       - name: Run Pytest
         run: |
-          pytest tests/ --disable-warnings -q
+          PYTHONPATH=. pytest tests/ --disable-warnings -q
+
